move to npm include style

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "butr",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build:marker": "rollup butr-marker.js -o butr-marker.min.js --config",
-    "build:to": "rollup butr-to.js -o butr-to.min.js --config"
+    "build:to": "rollup butr-to.js -o butr-to.min.js --config",
+    "build:all": "rollup src/butr.js -o dist/butr.js --config"
   },
   "author": "Bill Columbia",
   "license": "MIT",
@@ -14,7 +15,6 @@
     "babel-preset-latest": "^6.24.1",
     "rollup": "^0.45.1",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-node-resolve": "^3.0.0"
   }
 }
