--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": "github:ufhealth/butr",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
