--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "license": "MIT",
   "repository": "github:ufhealth/butr",
-  "main": "index.js",
+  "main": "dist/butr.common.js",
+  "module": "src/butr.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
@@ -20,6 +21,7 @@
     "html-webpack-plugin": "^2.30.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   }
 }
