--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "html-webpack-plugin": "^2.30.1",
+    "object-assign": "^4.1.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
