--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "butr",
-  "version": "0.7.1",
-  "description": "Scrollz like butter",
+  "version": "0.8.0",
+  "description": "Scroll like butter",
   "contributors": [
     "Bill Columbia <hello@billcolumbia.com>",
     "Kyle Tucker <kyleatucker@gmail.com>"
