--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "onchange": "^6.0.0",
     "rev-hash": "^3.0.0",
     "rimraf": "^2.6.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   }
