update release notes

--- a/resources/changelog/one-oh.yml
+++ b/resources/changelog/one-oh.yml
@@ -1,10 +1,13 @@
 new:
-  - Large refactor, smaller payload, better performace
-  - New API for using Butr
+  - Large refactor, smaller payload, better performace, new build system, updated dependencies
+  - New API for using Butr and new module style for usage with ES modules or ES5
   - New classes for elements for the stickyNav to more smartly avoid collisions
+  - Sub Modules all in own files now
 
 fixed:
   - Fix cross browser bugs
   - Fix rounding issues
   - Fix collision with footers and other content that comes after stickyNav
   - Fix marker height and position during transition to active links
+  - Optimizations from @myleshyson on Sticky nav
+  - Fixes on marker size and animations calculations from @friartuck6000
