--- a/package.json
+++ b/package.json
@@ -30,30 +30,30 @@
     "> 1% in US, ie 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.13.14",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
     "@ufhealth/shipit": "^0.2.1",
-    "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.7",
+    "babel-loader": "^8.2.2",
+    "browser-sync": "^2.26.14",
     "classlist-polyfill": "^1.2.0",
-    "core-js": "^3.1.4",
+    "core-js": "^3.9.1",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "glob": "^7.1.4",
-    "http-server": "^0.12.0",
+    "http-server": "^0.12.3",
     "npm-run-all": "^4.1.5",
     "object-assign": "^4.1.1",
-    "onchange": "^6.0.0",
+    "onchange": "^6.1.1",
     "rev-hash": "^3.0.0",
     "rimraf": "^2.6.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "terser-webpack-plugin": "^4.2.3",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   }
 }
